<resources>

    <string name="app_name">北京市警察协会</string>
    
    <string name="title_tab0">北京警察协会书籍</string>
    <string name="main_exit">确定退出？</string>
    
    <!-- loginActivity -->
    <string name="login_title">北京市警察协会</string>
    <string name="login_username">用户名</string>
    <string name="login_pwd">首页</string>
    <string name="login_login">登陆</string>
    <string name="login_forgetpwd">忘记了用户名或者密码</string>
    <string name="login_username_empty">用户名不能为空</string>
    <string name="login_pwd_empty">密码不能为空</string>
    <string name="login_logining">正在登陆</string>
    
    <!-- MainActivity string -->
    <string name="main_tab_0">首页</string>
    <string name="main_tab_1">收藏</string>
    <string name="main_tab_2">下载</string>
    <string name="main_tab_3">搜索</string>
    <string name="main_tab_4">设置</string>
    
    <!-- albumlist -->
    <string name="album_title">警察协会书籍库</string>
    
    <!-- booklist -->
    <string name="book_download">下载</string>
    <string name="book_favorite">收藏</string>
    <string name="book_favorited">已收藏</string>
    <string name="book_download_success">已下载</string>
    <string name="book_download_failure">下载失败</string>
    <string name="book_downloading">下载中</string>
    
    <!-- favorite -->
    <string name="favorite_title">收藏</string>
    <string name="favorite_del">删除</string>
    <string name="favorite_longclick2edit">长按书籍可编辑收藏</string>
    <string name="favorite_empty">没有收藏的书籍</string>
    
    <!-- download center -->
    <string name="download_book_empty">没有下载内容</string>
    <string name="download_book_failed">下载失败</string>
    <string name="download_book_retry">重试</string>
    <string name="download_book_delete">删除</string>
    <string name="download_book_cancel">取消</string>
    <string name="download_book_delete_wanning">确定要删除吗?</string>
    
    <!-- search -->
    <string name="search">搜索</string>
    <string name="search_hint">输入书名</string>
    <string name="search_key_empty">请输入书名</string>
    <string name="search_empty">无匹配的书籍</string>
    
    <!-- global -->
    <string name="error_no_data">暂无数据，请稍后重试</string>
    <string name="error_no_network_retry">网络连接失败, 请检查网络, 点击重试.</string>
    <string name="error_no_network">网络连接失败</string>
    <string name="error_retry">点击重试</string>
    <string name="loading">正在载入 …</string>
    <string name="waiting">请稍候 …</string>
    
    <!-- notification -->
    <string name="notification_downloading">正在下载,点击查看.</string>
    <string name="notification_format">有%s个任务正在下载</string>
    
    <!-- download service -->
    <string name="download_error_nosdcard">SD卡不可用</string>

</resources>