<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login" >

    <LinearLayout
        android:layout_width="@dimen/login_panel_width"
        android:layout_height="@dimen/login_panel_height"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_top_height"
            android:background="@color/bg_blue_level2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/login_center_padding"
            android:paddingLeft="@dimen/login_center_padding"
            android:paddingRight="@dimen/login_center_padding" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/login_logo"
                android:drawablePadding="10dp"
                android:layout_marginTop="8dp"
                android:includeFontPadding="false"
                android:gravity="center"
                android:text="@string/login_title"
                android:textColor="@color/bg_blue_level2"
                android:textSize="@dimen/shared_title_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edit_spacing"
                android:includeFontPadding="false"
                android:text="@string/login_username"
                android:textColor="@color/bg_gary_l3" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp" >

                <ImageView
                    android:layout_width="@dimen/login_edit_height"
                    android:layout_height="match_parent"
                    android:background="@color/bg_gary_l2"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_user" />

                <EditText
                    android:id="@+id/login_edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:background="@drawable/bg_editbox_selector"
                    android:imeOptions="actionNext"
                    android:inputType="textVisiblePassword"
                    android:paddingLeft="50dp"
                    android:singleLine="true" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edit_spacing"
                android:includeFontPadding="false"
                android:text="@string/login_pwd"
                android:textColor="@color/bg_gary_l3" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp" >

                <ImageView
                    android:layout_width="@dimen/login_edit_height"
                    android:layout_height="match_parent"
                    android:background="@color/bg_gary_l2"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_pwd"
                    android:textColor="@color/bg_gary_l3" />

                <EditText
                    android:id="@+id/login_edit_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:imeOptions="actionDone"
                    android:background="@drawable/bg_editbox_selector"
                    android:inputType="textPassword"
                    android:paddingLeft="50dp"
                    android:singleLine="true" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_bottom_height"
            android:background="@color/bg_gary_l1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/login_login"
                android:layout_width="@dimen/login_btn_width"
                android:layout_height="@dimen/login_btn_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/bg_blue_level2"
                android:gravity="center"
                android:text="@string/login_login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/shared_title_size" />

            <TextView
                android:id="@+id/login_forgetpwd"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_forgetpwd"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/global_func_btn_tx_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="bottom"
                android:background="@color/bg_gary_l2" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>