<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/book_list_item_height"
    android:padding="@dimen/book_list_item_padding" >

    <ImageView
        android:id="@+id/download_book_cover"
        android:layout_width="@dimen/book_cover_width"
        android:layout_height="@dimen/book_cover_height"
        android:scaleType="fitXY"
        android:src="@drawable/cover" />

    <TextView
        android:id="@+id/download_book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/book_name_margin_left"
        android:layout_marginTop="@dimen/book_list_item_horizontal_spacing"
        android:layout_toRightOf="@id/download_book_cover"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/book_name_size" />

    <TextView
        android:id="@+id/download_book_album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/download_book_name"
        android:layout_below="@id/download_book_name"
        android:layout_marginTop="@dimen/book_list_item_horizontal_spacing"
        android:includeFontPadding="false"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@+id/download_book_downloading_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/download_book_name"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/download_book_cover"
        android:orientation="horizontal" >

        <ProgressBar
            android:id="@+id/download_book_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="@dimen/download_progress_height"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/download_progress_margin_right"
            android:layout_weight="1"
            android:max="100"
            android:progressDrawable="@drawable/progress_style" />

        <TextView
            android:id="@+id/download_book_progress_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/download_progress_tx_margin_right"
            android:gravity="center"
            android:text="0%"
            android:textColor="@color/bg_blue_level1"
            android:textSize="@dimen/global_func_btn_tx_size" />

        <TextView
            android:id="@+id/download_book_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_download"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/download_book_cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/global_func_btn_tx_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/download_book_complete_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/download_book_name"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/download_book_cover"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/download_book_failed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/download_progress_tx_margin_right"
            android:layout_weight="1"
            android:text="@string/download_book_failed"
            android:textSize="@dimen/global_func_btn_tx_size" />

        <TextView
            android:id="@+id/download_book_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_download"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/download_book_retry"
            android:textColor="@android:color/white"
            android:textSize="@dimen/global_func_btn_tx_size" />

        <TextView
            android:id="@+id/download_book_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_btn_download"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/download_book_delete"
            android:textColor="@android:color/white"
            android:textSize="@dimen/global_func_btn_tx_size" />
    </LinearLayout>

</RelativeLayout>